--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
-            name="noteData"
-            type="com.example.noteapps.NoteData" />
+            name="viewModel"
+            type="com.example.noteapps.screen.add.AddNoteViewModel" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".AddNoteActivity">
+        tools:context=".screen.add.AddNoteActivity">
 
         <EditText
             android:id="@+id/et_title"
@@ -23,7 +23,7 @@
             android:hint="@string/hint_title"
             android:inputType="text"
             android:textColor="@color/textColorPrimary"
-            android:text="@={noteData.noteTitle}"
+            android:text="@{viewModel.noteTitle}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -37,7 +37,7 @@
             android:gravity="top"
             android:hint="@string/hint_note_description"
             android:inputType="textMultiLine"
-            android:text="@={noteData.noteDescription}"
+            android:text="@{viewModel.noteDesc}"
             app:layout_constraintBottom_toTopOf="@+id/btn_save"
             app:layout_constraintEnd_toEndOf="@+id/et_title"
             app:layout_constraintStart_toStartOf="@+id/et_title"
